<resources>
    <string name="app_name">Home Therapy</string>
    <string name="my_or_my_client_s_exercises">Exercise Library</string>
    <string name="title_activity_test_navigation">Test Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Do not click</string>
    <string name="newUserDataSaved">New user data saved</string>
    <string name="my_rewards">My Rewards</string>
    <string name="title_activity_my_clients">My Clients</string>
    <string name="my_exercises">My Exercises</string>
    <string name="my_messages">My Messages</string>
    <string name="my_clients">My Clients</string>
    <string name="title_activity_my_messages">My Messages</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_my_rewards">My Rewards</string>
    <string name="title_activity_my_exercises">My Exercises</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_exercises">Library of Exercises</string>
    <string name="exercise_library">Exercise Library</string>
    <string name="assign_new_exercise">Assign New Exercise</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="my_home_therapy_app">My Home Therapy App</string>

</resources>
