<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--for Therapists-->
    <group
        android:checkableBehavior="single"
        android:id="@+id/mp_therapist_menu"
        android:visible="false" >

        <item
            android:id="@+id/nav_myClients"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_clients" />
        <item
            android:id="@+id/nav_exercise_library"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_library" />
        <item
            android:id="@+id/nav_myMessages"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_messages" />
    </group>

    <!-- for admin -->
    <group
        android:checkableBehavior="single"
        android:id="@+id/mp_admin_menu"
        android:visible="false" >

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Users" />
        <item
            android:id="@+id/nav_exercise_library1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_library" />
    </group>

    <!--for Clients-->
    <group
        android:checkableBehavior="single"
        android:id="@+id/mp_client_menu"
        android:visible="false" >

        <item
            android:id="@+id/nav_myExercises"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_exercises" />
        <item
            android:id="@+id/nav_myRewards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_rewards" />
        <item
            android:id="@+id/nav_myMessages1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_messages" />

    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_myProfile"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_LogOut"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
