<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addNewExercise"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_new_exercise" />
        <item
            android:id="@+id/nav_returnToDashboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/return_to_dashboard" />
        </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_myProfile"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_LogOut"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
